# journalint

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  2023-05-04.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  NOTES.md  README.md  Taskfile.yaml  cspell.json  journalint.code-workspace  package-lock.json  package.json  testdata.md  towncrier.toml
.cspell/: project-words.txt  python-words.txt  rust-words.txt
.github/: dependabot.yml
.github/agents/: committer.agent.md
.github/workflows/: cicd.yaml
changelog.d/: +add-lint-for-starttime-mismatch.added.txt  +fix-violations-depending-on-previous-ones-properly.txt  +report-oneline.added.txt  +report-to-stdout.changed.txt  +show-remaining-violations-after-fix.txt  +towncrier.misc.txt  11.added.txt  11.changed.txt  18.added.txt
client/: .gitignore  package.json
client/src/: extension.ts
crates/journalint/: Cargo.toml
crates/journalint-parse/: Cargo.toml
crates/journalint-parse/src/: ast.rs  diagnostic.rs  errors.rs  lib.rs  lint.rs  parse.rs  rule.rs  violation.rs
crates/journalint/src/: arg.rs  ast.rs  autofix.rs  code.rs  commands.rs  diagnostic.rs  errors.rs  export.rs  journalint.rs  line_mapper.rs  linemap.rs  lint.rs  linting.rs  lsptype_utils.rs  main.rs  parse.rs  parser2.rs  parsers.rs  server.rs  service.rs  text_edit.rs  textedit.rs  violation.rs
crates/journalint/src/cli/: arg.rs  cli_main.rs  export.rs  mod.rs  report.rs
crates/journalint/src/commands/: autofix.rs  mod.rs  recalculate_duration.rs  replace_with_previous_end_time.rs  use_date_in_filename_visitor.rs
crates/journalint/src/ng/: linter2.rs  mod.rs  parser2.rs
crates/journalint/src/parsing/: front_matter.rs  journal.rs  mod.rs  primitives.rs
crates/journalint/src/snapshots/: end-time-exceeds-59.md  incorrect-duration.md  journalint__snapshot_tests__end-time-exceeds-59.snap  journalint__snapshot_tests__incorrect-duration.snap  journalint__snapshot_tests__mismatched-end-time.snap  journalint__snapshot_tests__parse-error-empty-file.snap  journalint__snapshot_tests__time-jumped.snap  journalint__snapshot_tests__valid.snap  journalint__snapshot_tests__valid.snap.new  mismatched-end-time.md  time-jumped.md  valid.md
docs/: development.md  troubleshooting.md
scripts/: build-vsix.ps1  build-vsix.sh  compile-crates.ps1  compile-crates.sh  compile-node.ps1  compile-node.sh  configure.ps1  configure.sh  dist.ps1  dist.sh  makedist.ps1  makedist.sh  variables.sh
server/: Cargo.toml
server/src/: arg.rs  diagnostic.rs  errors.rs  journal.pest  journalint.rs  linting.rs  main.rs  parser.rs  server.rs
server/src/parsing/: front_matter.rs  journal.rs  primitives.rs
tools/journalint-vscode/: .gitignore  .vscode-test.mjs  LICENSE.md  eslint.config.mjs  package-lock.json  package.json
tools/journalint-vscode/scripts/: compile.js
tools/journalint-vscode/src/: extension.ts  log.ts
tools/journalint-vscode/src/test/: extension.test.ts
