[workspace]
members = ["crates/journalint", "crates/journalint-parse"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "24.4.1"

[workspace.dependencies]
ariadne = { version = "0.2.0", features = ["auto-color"] }
chrono = { version = "0.4.31", features = ["serde"] }
chumsky = "0.9.2"
clap = { version = "4.1.8", features = ["derive"] }
crossbeam-channel = "0.5.8"
env_logger = "0.10.0"
exitcode = "1.1.2"
insta = { version = "1.31.0", features = ["yaml"] }
log = "0.4.20"
lsp-server = "0.7.0"
lsp-types = "0.94.0"
rstest = "0.18.1"
serde = "1.0.160"
serde_json = "1.0.94"
serde_yaml = "0.9.30"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.39"
url = "2.5.0"
