[workspace]
members = ["crates/journalint", "crates/journalint-parse"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "24.6.1"

[workspace.dependencies]
ariadne = { version = "0.2.0", features = ["auto-color"] }
chrono = { version = "0.4.40", features = ["serde"] }
chumsky = "0.9.2"
clap = { version = "4.5.34", features = ["derive"] }
crossbeam-channel = "0.5.8"
env_logger = "0.10.0"
exitcode = "1.1.2"
insta = { version = "1.42.2", features = ["yaml"] }
log = "0.4.27"
lsp-server = "0.7.0"
lsp-types = "0.94.0"
rstest = "0.18.1"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.30"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.39"
url = "2.5.0"
