[package]
name = "journalint"
version = "0.1.1"
edition = "2021"

[dependencies]
ariadne = { version = "0.2.0", features = ["auto-color"] }
chrono = "0.4.23"
chumsky = "0.9.2"
clap = { version = "4.1.8", features = ["derive"] }
exitcode = "1.1.2"
lsp-server = "0.7.0"
lsp-types = "0.94.0"
serde = "1.0.160"
serde_json = "1.0.94"
serde_yaml = "0.9.21"
thiserror = "1.0.39"

[dev-dependencies]
rstest = "0.18.1"
