[package]
name = "journalint"
version.workspace = true
edition.workspace = true

[dependencies]
ariadne.workspace = true
chrono.workspace = true
chumsky.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
env_logger.workspace = true
exitcode.workspace = true
journalint-parse = { path = "../journalint-parse" }
log.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
